spade-tests/src/snapshots/spade_tests__suggestions__suggest_make_function_an_entity.snap
---
source: spade-tests/src/suggestions.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Entities or pipelines can not be instanciated in functions
  ┌─ testinput:6:5
  │
5 │ fn bar() -> int<1> {
  │ -- Because this is a function
6 │     inst foo()
  │     ^^^^ inst not allowed here
  │
  = Functions can only contain combinatorial logic
  │
5 │ fnentity bar() -> int<1> {
  │ --++++++ Consider making the function an entity


